# exodium

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  manifest.json  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: build.yml
metadata/: dosbox.txt
scripts/: gen_thumbnails.py  get-dosbox.sh  init-dev.sh
src/: App.tsx  util.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: content_packs.rs  games.rs  mod.rs  setup.rs  updates.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/import/: extract.rs  mod.rs  xml.rs
src-tauri/src/models/: game.rs  mod.rs  playlist.rs
src-tauri/src/torrent/: manager.rs  mod.rs
src-tauri/tests/: playability.rs
src/api/: tauri.test.ts  tauri.ts
src/components/: ContentPackSettings.tsx  DownloadIndicator.tsx  GameCard.tsx  GameDetailPanel.tsx  GameSettingsDialog.tsx  Lightbox.tsx  ManualViewer.tsx  ProgressBar.tsx  SearchBar.tsx  Select.tsx  WelcomeModal.tsx  WindowControls.tsx  WindowFrame.tsx
src/pages/: Intro.css  Intro.tsx  Library.tsx  Setup.tsx
src/stores/: contentPacks.ts  downloads.test.ts  downloads.ts  games.test.ts  games.ts  metadata.ts  thumbnails.ts
src/styles/: main.css
src/test/: setup.ts
torrents/: eXoDOS.torrent  eXoDOS_GLP.torrent  eXoDOS_PLP.torrent  eXoDOS_SLP.torrent
