[package]
name = "exodium"
version = "0.3.2"
description = "Cross-platform eXoDOS game launcher"
authors = ["redfox"]
edition = "2021"
default-run = "exodium"

[lib]
name = "exodium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "generate_db"
path = "src/bin/generate_db.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# XML parsing (eXoDOS metadata)
quick-xml = { version = "0.36", features = ["serialize"] }

# ZIP extraction (eXoDOS Lite archives)
zip = "2"

# Gzip decompression (bundled metadata)
flate2 = "1"

# File system traversal
walkdir = "2"

# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["fs", "sync"] }

# Torrent parsing
lava_torrent = "0.11"

# Torrent downloading
# Pinned to v9.0.0-beta.2 git tag — 8.x silently stalls Windows downloads at 0%
# because it does NOT use sparse files on NTFS, so it tries to pre-allocate the
# full multi-100-GB torrent before any pieces transfer. Upstream PR #390 fixed
# this only on the v9 line. Stable 8.1.1 (latest on crates.io) lacks the fix.
librqbit = { git = "https://github.com/ikatson/rqbit", tag = "v9.0.0-beta.2" }

# HTTP client (content pack downloads)
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"

# Cryptographic hashing (sha256 verification of downloaded packs)
sha2 = "0.10"

# Tar extraction (content pack archives)
tar = "0.4"

# Disk space queries (pre-flight check before large downloads)
fs2 = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

